add / google maps script

--- a/views/layouts/application.html
+++ b/views/layouts/application.html
@@ -34,6 +34,7 @@
     </defs>
   </svg>
   <%= renderPartial('shared/svg/sprite.svg') %>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script src="/dist/bundle.js"></script>
 </body>
 </html>
