--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -14,6 +14,18 @@
   .page__intro {max-width: 100%}
 }
 
+.what-we-do__discipline-inner {
+  position: relative;
+  padding-top: 100%;
+}
+
+.what-we-do__discipline-inner-center {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
 .what-we-do__discipline-label,
 .what-we-do__offering-label {
   letter-spacing: 3px;
@@ -43,13 +55,21 @@
 
 .what-we-do__offering-icon {
   > svg {
-    display: none;
-    width: 40%;
-    height: 40%;
+    // display: none;
+    width: 50%;
   }
 }
 
-.touch .what-we-do__offering-icon > svg {display: initial}
+// .touch .what-we-do__offering-icon > svg {display: initial}
+
+.what-we-do__offerings-row {
+  padding: 8em 0;
+}
+
+.offering-brand-development .what-we-do__offering-icon > svg,
+.offering-mobile .what-we-do__offering-icon > svg {
+  width: 30%;
+}
 
 .what-we-do__disciplines-graphic-circle {
   &.offering {
@@ -103,6 +123,18 @@
   .what-we-do__offering {
     width: 100%;
     padding: 0;
+  }
+
+  .what-we-do__discipline-inner {
+    padding: 0;
+  }
+
+  .what-we-do__discipline-inner-center {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    padding: initial;
   }
 
   .what-we-do__offering-icon {
