--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -6,6 +6,10 @@
   bottom: 0;
   overflow-y: auto;
 
+  .gm-scroll-view {
+    transform: translateZ(0);
+  }
+
   .gm-scrollbar.-vertical {
     top: 4px;
     right: 4px;
