update / bottom links, under <=500 show only the 1st item, hide the rest

--- a/public/css/ui/bottom-page-links.less
+++ b/public/css/ui/bottom-page-links.less
@@ -48,4 +48,8 @@
     width: 100%;
     border-width: 0!important;
   }
+
+  .page__bottom-links-item:not(:first-child) {
+    display: none;
+  }
 }
