add / gemini-scrollbar as lib for possible updates

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -6,7 +6,8 @@
 /* =========================================================================== *
  *  vendor :: gemini-scrollbar :: Custom overlay-scrollbars with native scrolling mechanism.
  * =========================================================================== */
-@import (inline) './../../node_modules/gemini-scrollbar/gemini-scrollbar.css';
+// @import (inline) './../../node_modules/gemini-scrollbar/gemini-scrollbar.css';
+@import (inline) './../js/lib/gemini-scrollbar/gemini-scrollbar.css';
 
 /* =========================================================================== *
  *  lib :: kabinett
