--- a/public/js/lib/gemini-scrollbar/gemini-scrollbar.css
+++ b/public/js/lib/gemini-scrollbar/gemini-scrollbar.css
@@ -68,6 +68,7 @@
   cursor: pointer;
   border-radius: inherit;
   background-color: rgba(0,0,0,.2);
+  will-change: transform;
 }
 
 .gm-scrollbar .thumb:hover,
