--- a/public/js/lib/gemini-scrollbar/gemini-scrollbar.css
+++ b/public/js/lib/gemini-scrollbar/gemini-scrollbar.css
@@ -95,6 +95,7 @@
 .gm-scrollbar-container.gm-autoshow .gm-scrollbar {
   opacity: 0;
   transition: opacity 120ms ease-out;
+  will-change: opacity;
 }
 .gm-scrollbar-container.gm-autoshow:hover .gm-scrollbar,
 .gm-scrollbar-container.gm-autoshow:focus .gm-scrollbar {
