--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -72,11 +72,13 @@
   right: 0;
   visibility: hidden;
   transform: translateX(6rem);
+  transform: translate3d(6rem,0,0);
   transition: transform 400ms @ease;
   will-change: transform;
 
   &.active {
     transform: translateX(0);
+    transform: translate3d(0,0,0);
     visibility: visible;
   }
 }
