add / AboutUs » team » network icons :hover state

--- a/public/css/lib/kabinett/source/less/core/_variables.less
+++ b/public/css/lib/kabinett/source/less/core/_variables.less
@@ -40,7 +40,11 @@
 @color-facebook: #3e5c9a;
 @color-twitter: #55acee;
 @color-google-plus: #dd4b39;
-
+@color-dribbble: #ea4c89;
+@color-github: #4078c0;
+@color-soundcloud: #ff3300;
+@color-medium: #57ad68;
+@color-steam: #3f7696;
 
 
 // elements buttons
