--- a/public/css/style.less
+++ b/public/css/style.less
@@ -17,7 +17,9 @@
 @import 'variables';
 @import 'fonts';
 @import './utilities';
+
 @import './ui/gradients';
+@import './ui/social';
 @import './ui/slider';
 @import './ui/menu';
 @import './ui/grid';
