--- a/public/css/ui/what-we-do-circle.less
+++ b/public/css/ui/what-we-do-circle.less
@@ -3,11 +3,17 @@
   width: 520px;
   height: 520px;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(0,-50%) scale(.5);
+  transform: translate3d(0,-50%,0) scale(.5);
   opacity: 0;
-  transition: opacity 400ms ease;
+  transition: opacity 100ms linear, transform 200ms ease;
+  will-change: opacity, transform;
 
-  &.active {opacity: 1}
+  &.active {
+    opacity: 1;
+    transform: translate(0,-50%) scale(1);
+    transform: translate3d(0,-50%,0) scale(1);
+  }
 
   &.graphic__hide-stroke {
     .wwd__inner-circle {opacity: 0}
@@ -48,10 +54,6 @@
 .wwd__list {
   font-size: 1.35rem;
   list-style: none;
-  opacity: 0;
-  transition: opacity 400ms ease;
-
-  &.active {opacity: 1}
 }
 
 .wwd__list-item {
@@ -75,24 +77,6 @@
     transform: scale(0);
     transition: transform 200ms ease-in-out;
   }
-}
-
-.wwd__offerings-icon {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 100%;
-  height: 100%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: opacity 400ms ease;
-
-  > svg {
-    width: 100%;
-    height: 100%;
-  }
-
-  &.active {opacity: 1}
 }
 
 @media all and (max-width: 768px) {
