--- a/public/css/pages/carrers.less
+++ b/public/css/pages/carrers.less
@@ -90,6 +90,7 @@
   transform: translate(0, -50%);
   opacity: 0;
   transition: opacity 100ms linear;
+  will-change: opacity;
 
   &.active {opacity: 1}
 }
