--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -1,3 +1,26 @@
+.page__loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transform: translateY(100%);
+  transform: translate3d(0,100%,0);
+  transition: transform 400ms ease-in-out;
+  will-change: transform;
+
+  &.active {
+    transform: translateY(0);
+    transform: translate3d(0,0,0);
+  }
+
+  &.gone {
+    transform: translateY(-100%);
+    transform: translate3d(0,-100%,0);
+  }
+}
+
 .pages {
   z-index: 1;
   position: absolute;
