update / home slides - removed cv.by - added external link for cv.org

--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -20,10 +20,10 @@
   }
 }
 
-.slides__cv-by {
-  > .em-slide__bg {opacity: .3}
+// .slides__cv-by {
+//   > .em-slide__bg {opacity: .3}
 
-  > .em-slide__text > .ui-btn:hover {
-    color: #1BB8BB;
-  }
-}
+//   > .em-slide__text > .ui-btn:hover {
+//     color: #1BB8BB;
+//   }
+// }
