--- a/public/css/ui/grid-item-clone.less
+++ b/public/css/ui/grid-item-clone.less
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   transform-origin: 0 0;
-  transition: transform 400ms ease-in-out;
+  transition: transform 400ms @ease;
   will-change: transform, opacity;
   opacity: 0;
 
