--- a/public/css/ui/what-we-do-circle.less
+++ b/public/css/ui/what-we-do-circle.less
@@ -14,29 +14,11 @@
     transform: translate(0,-50%) scale(1);
     transform: translate3d(0,-50%,0) scale(1);
   }
-
-  &.graphic__hide-stroke {
-    .wwd__inner-circle {opacity: 0}
-  }
-}
-
-.wwd__inner-circle {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding-top: 100%;
-  border: 2px solid @accent-orange;
-  border-radius: 50%;
-  transform: scale(1);
-  transition:
-    border-color 400ms ease,
-    transform 400ms cubic-bezier(0.63,.64,.3,1);
 }
 
 .wwd__inner-circle-label {
   font-size: 2.667rem;
-  top: 0;
+  top: .2em;
   left: 50%;
   background: white;
   padding: 0 1rem;
