use public version of gemini-scrollbar

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -6,8 +6,9 @@
 /* =========================================================================== *
  *  vendor :: gemini-scrollbar :: Custom overlay-scrollbars with native scrolling mechanism.
  * =========================================================================== */
-// @import (inline) './../../node_modules/gemini-scrollbar/gemini-scrollbar.css';
-@import (inline) './../js/lib/gemini-scrollbar/gemini-scrollbar.css';
+@import (inline) './../../node_modules/gemini-scrollbar/gemini-scrollbar.css';
+.gm-scrollbar .thumb {will-change: transform}
+.gm-autoshow .gm-scrollbar {will-change: opacity}
 
 /* =========================================================================== *
  *  lib :: kabinett
