fix / what we do inner, responsiveness

--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -97,6 +97,14 @@
     display: none;
   }
 
+  .what-we-do__discipline-inner {
+    padding: 0;
+  }
+
+  .what-we-do__discipline-inner-center {
+    position: initial;
+  }
+
   .what-we-do__discipline {
     width: 100%;
     padding: 0;
