about us, gallery, responsive detail for info container (decreased top padding)

--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -139,6 +139,12 @@
   border: 1px solid transparent;
 }
 
+@media all and (max-width: 768px) {
+  .about-us__team-gallery-info {
+    padding-top: 5rem;
+  }
+}
+
 @media all and (max-width: 1024px) {
   .page-about-us .page__intro {
     max-width: 100%;
