fix / typo, :%s/carrers/careers

--- a/public/css/pages/careers.less
+++ b/public/css/pages/careers.less
@@ -1,4 +1,4 @@
-.page-carrers {
+.page-careers {
   .page__intro-wrapper {
     padding-top: 10rem;
     padding-bottom: 10rem;
@@ -15,7 +15,7 @@
 }
 
 /* image strip */
-.carrers__image-strip {}
+.careers__image-strip {}
 
 .image-strip {
   float: left;
@@ -24,15 +24,15 @@
   background-size: cover;
   background-repeat: no-repeat;
 
-  &:nth-child(1) {background-image: url('/img/views/carrers/image-strip/image.jpg')}
-  &:nth-child(2) {background-image: url('/img/views/carrers/image-strip/image-02.jpg')}
-  &:nth-child(3) {background-image: url('/img/views/carrers/image-strip/image-03.jpg')}
-  &:nth-child(4) {background-image: url('/img/views/carrers/image-strip/image-04.jpg')}
-  &:nth-child(5) {background-image: url('/img/views/carrers/image-strip/image-05.jpg')}
+  &:nth-child(1) {background-image: url('/img/views/careers/image-strip/image.jpg')}
+  &:nth-child(2) {background-image: url('/img/views/careers/image-strip/image-02.jpg')}
+  &:nth-child(3) {background-image: url('/img/views/careers/image-strip/image-03.jpg')}
+  &:nth-child(4) {background-image: url('/img/views/careers/image-strip/image-04.jpg')}
+  &:nth-child(5) {background-image: url('/img/views/careers/image-strip/image-05.jpg')}
 }
 
 /* we are all items */
-.carrers__were-all {
+.careers__were-all {
   max-width: 76.6%;
   margin: 0 auto;
 }
