--- a/public/css/style.less
+++ b/public/css/style.less
@@ -35,7 +35,7 @@
 @import './pages/what-we-do';
 @import './pages/case-studies';
 @import './pages/about-us';
-@import './pages/carrers';
+@import './pages/careers';
 @import './pages/community';
 @import './pages/journal';
 @import './pages/lets-talk';
