update / carrers, intro text responsive spacing

--- a/public/css/pages/careers.less
+++ b/public/css/pages/careers.less
@@ -154,6 +154,16 @@
   }
 }
 
+
+@media all and (max-width: 768px) {
+  .page-careers {
+    .page__intro-wrapper {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+}
+
 @media all and (max-width: 500px) {
   .perks__item {
     width: 100%;
