--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -96,9 +96,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    transform: translate3d(0,-100%,0);
-    transform: translate(0,-100%);
-    transition: transform 180ms ease;
+    transform: translate3d(0,100%,0);
+    transform: translate(0,100%);
+    transition: transform 160ms ease;
   }
 
   &:active {top: 1px}
