--- a/public/css/pages/case-studies.less
+++ b/public/css/pages/case-studies.less
@@ -4,7 +4,7 @@
   }
 
   .work-with-us .work-with-us__title::after {
-    background-color: @accent-pink;
+    background-color: @accent-orange;
   }
 }
 
