remove / font-smoothing, makes the font looks too thin

--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -45,8 +45,8 @@
   font weights
  * =========================================================================== */
 .-font-thin {font-family: 'Graphik-Thin'; font-weight: 100}
-.-font-extra-light {font-family: 'Graphik-Extralight'; font-weight: 200; -webkit-font-smoothing: antialiased;}
-.-font-light {font-family: 'Graphik-Light'; font-weight: 300; -webkit-font-smoothing: antialiased;}
+.-font-extra-light {font-family: 'Graphik-Extralight'; font-weight: 200; /*-webkit-font-smoothing: antialiased;*/}
+.-font-light {font-family: 'Graphik-Light'; font-weight: 300; /*-webkit-font-smoothing: antialiased;*/}
 .-font-normal {font-family: 'Graphik-Regular'; font-weight: 400}
 .-font-semi-bold {font-family: 'Graphik-Semibold'; font-weight: 600}
 .-font-bold {font-family: 'Graphik-Bold'; font-weight: 700}
