--- a/public/css/lib/kabinett/source/less/utilities/interaction.less
+++ b/public/css/lib/kabinett/source/less/utilities/interaction.less
@@ -12,6 +12,7 @@
 }
 
 .-clickable {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-touch-callout: none;
   user-select: none;
   cursor: pointer;
