--- a/public/css/ui/grid-item-clone.less
+++ b/public/css/ui/grid-item-clone.less
@@ -18,3 +18,9 @@
 .grid__item-clone-inner {
   opacity: .2;
 }
+
+@media all and(max-width: 500px) {
+  .grid__item-clone {
+    opacity: 0!important;
+  }
+}
