--- a/public/css/ui/menu.less
+++ b/public/css/ui/menu.less
@@ -30,3 +30,9 @@
   .menu__svg .a {display: none}
   .menu__svg .b {display: block}
 }
+
+@media all and(max-width: 500px) {
+  .menu {
+    top: 20px;
+  }
+}
