grid interaction for mobile

--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -171,7 +171,7 @@
     padding: 0;
   }
 
-  [data-project-planner-btn] {
+  .grid [data-project-planner-btn] {
     font-size: 16px;
     margin-bottom: 15px;
   }
