cover headings, make them fit for small screens

--- a/public/css/ui/slider.less
+++ b/public/css/ui/slider.less
@@ -79,3 +79,16 @@
   line-height: 1.11em;
   margin: 2.5rem 0 0 0;
 }
+
+@media all and(max-width: 500px) {
+  .em-slide__text {
+    bottom: 20px;
+    left: 20px;
+    right: 50px;
+  }
+
+  .em-slide__heading {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+}
