--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -201,3 +201,15 @@
   font-size: 1.583rem;
   line-height: 1.895em;
 }
+
+@media all and(max-width: 500px) {
+  .page__header-intro {
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+  }
+
+  .page__header-heading {
+    font-size: 30px;
+  }
+}
