add / media query, max base font = 12px on 1280px width

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -84,6 +84,10 @@ a {
   &.-purple {.mixin-links(@accent-purple)}
 }
 
+@media all and (min-width: 1280px) {
+  :root {font-size: 12px;}
+}
+
 @media all and (max-width: 768px) {
   :root {font-size: 10px;}
 }
