--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -42,6 +42,11 @@
   }
 }
 
+.page__container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .page__header {
   position: relative;
   height: 100vh;
@@ -119,24 +124,9 @@
   padding: .1em 0 0 .8em;
 }
 
-.page__body {
-  // padding: 0 3.33rem;
-}
-
-.page__intro-wrapper {
-  padding: 5rem;
-}
-
-.page__intro {
-  max-width: 80%;
-  margin: 0 auto;
-}
-
 .testimonial-blockquote {
   font-size: 1.583em;
-  width: 70%;
-  margin: 0 auto;
-  padding: 7.4em 0;
+  padding: 7.4em 5em;
 }
 
 .testimonial-text {
