what we do, constrainer to 1440px

--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -112,16 +112,12 @@
 }
 
 @media all and (max-width: 768px) {
-  .page-what-we-do .page__intro,
-  .what-we-do__disciplines-row,
-  .what-we-do__offerings-row {
-    height: auto;
-    padding: 0 0 5rem;
+  .what-we-do__disciplines-row {
+    padding-bottom: 5rem;
   }
 
-  .page-what-we-do .page__intro,
-  .what-we-do__disciplines-wrapper {
-    padding-top: 5rem;
+  .what-we-do__offerings-row {
+    padding: 0 0 5rem;
   }
 
   .what-we-do__disciplines-graphic  {
