--- a/public/css/ui/work-with-us.less
+++ b/public/css/ui/work-with-us.less
@@ -1,5 +1,5 @@
 .work-with-us {
-  padding: 18rem 8.3rem 14rem;
+  padding: 18rem 5em 14rem;
 }
 
 .work-with-us__title {
@@ -19,7 +19,7 @@
 }
 
 .join-us {
-  padding: 8rem 0;
+  padding: 8rem 5em;
 }
 
 .join-us__subtitle {
