--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -9,7 +9,7 @@
   visibility: hidden;
 
   &.active {
-    z-index: 1;
+    z-index: 2;
     opacity: 1;
     visibility: visible;
   }
@@ -20,7 +20,7 @@
 }
 
 .grid__inner {
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .grid__bg-image {
@@ -32,7 +32,11 @@
 }
 
 .grid__list {
-  padding: 120px 0 40px;
+  position: relatve;
+  padding: 0 0 40px;
+  transform: translateY(-50%);
+  position: relative;
+  top: 50%;
 }
 
 .grid__item {
@@ -80,7 +84,16 @@
 }
 
 .grid__footer {
+  position: relatve;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
   color: @color-neutral-light;
+}
+
+.grid [data-project-planner-btn] {
+  font-size: 16px;
 }
 
 .grid__footer-list {
@@ -88,14 +101,14 @@
 }
 
 .grid__footer-list-item {
-  font-size: 1.2rem;
+  font-size: 12px;
 }
 
 .grid__footer-list-item::after {
   content: '•';
   color: @color-neutral-dark;
   font-weight: bold;
-  padding: 0 1.667rem;
+  padding: 0 5px;
 }
 
 .grid__footer-list-item.last::after {
@@ -105,13 +118,16 @@
 
 @media all and(max-width: 730px) {
   .grid__list {
-    padding: 80px 10px 10px;
+    padding: 80px 10px 20px;
+    transform: none;
+    position: relative;
+    top: initial;
   }
 
   .grid__item {
     display: block;
     width: 100%;
-    height: 30px;
+    height: 36px;
     margin: 0;
 
     &.active {
@@ -127,7 +143,7 @@
   }
 
   .grid__item-title-wrapper {
-    top: 8px;
+    top: 10px;
     left: 10px;
     bottom: initial;
     right: 10px;
@@ -155,16 +171,23 @@
 
   .grid__footer {
     padding: 0;
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media all and(max-height: 500px) {
+  .grid__list {
+    padding: 80px 10px 30px;
+    transform: none;
+    position: relative;
+    top: initial;
   }
 
-  .grid [data-project-planner-btn] {
-    font-size: 16px;
-    margin-bottom: 15px;
-  }
-
-  .grid__footer-list-item {
-    font-size: 12px;
-
-    &::after {padding: 0 5px}
+  .grid__footer {
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
