Map background removed and color changed

--- a/public/css/pages/lets-talk.less
+++ b/public/css/pages/lets-talk.less
@@ -64,6 +64,7 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #F0EDE5 !important;
 }
 
 @media all and (max-width: 700px) {
