--- a/public/css/style.less
+++ b/public/css/style.less
@@ -82,6 +82,7 @@ a {
   &.-orange {.mixin-links(@accent-orange)}
   &.-pink {.mixin-links(@accent-pink)}
   &.-purple {.mixin-links(@accent-purple)}
+  &.-white {.mixin-links(@color-white)}
 }
 
 @media all and (min-width: 1440px) {
