--- a/public/css/style.less
+++ b/public/css/style.less
@@ -83,6 +83,7 @@ a {
   &.-pink {.mixin-links(@accent-pink)}
   &.-purple {.mixin-links(@accent-purple)}
   &.-white {.mixin-links(@color-white)}
+  &.-gray {.mixin-links(@color-neutral-light)}
 }
 
 @media all and (min-width: 1440px) {
