15 / Grid: Footer: Text: Increase Text size

--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -101,7 +101,7 @@
 }
 
 .grid__footer-list-item {
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .grid__footer-list-item::after {
@@ -170,10 +170,7 @@
   }
 
   .grid__footer {
-    padding: 0;
     position: relative;
-    padding-left: 0;
-    padding-right: 0;
   }
 }
 
@@ -189,5 +186,9 @@
     position: relative;
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .grid__footer-list-item {
+    font-size: 13px;
   }
 }
