43, Menu: Grid: Create active state for the last viewed item on the menu grid

--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -49,6 +49,11 @@
     .grid__item-cover {opacity: 1}
     .grid__item-cover-img {opacity: .1}
   }
+
+  &.active {
+    .grid__item-cover {opacity: 1}
+    .grid__item-cover-img {opacity: .2}
+  }
 }
 
 .grid__item-title-wrapper {
