39, Lets Talk: Empathia info Box: Add social media icons

--- a/public/css/pages/lets-talk.less
+++ b/public/css/pages/lets-talk.less
@@ -39,6 +39,13 @@
   margin: 5rem 0 1rem;
 }
 
+.contact-network {
+  opacity: 1;
+  transition: opacity 100ms;
+
+  &:hover {opacity: .7;}
+}
+
 .location-text {
   font-size: 1.333rem;
   line-height: 1.625em;
