37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect37, Journal: Medium Icon: Icon redirects user to Empathia Medium posts, and Icon has rollover effect

--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -19,7 +19,7 @@
 @btn-sm-radius: 0;
 
 @btn-md-font-size: 1.500rem;
-@btn-md-height: 3.111em;
+@btn-md-height: 3.1112em;
 @btn-md-radius: 0;
 
 @btn-lg-font-size: 1.5rem;
@@ -94,8 +94,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     transform: translate3d(0,100%,0);
     transform: translate(0,100%);
     transition: transform 160ms ease;
