--- a/public/css/lib/kabinett/source/less/core/_mixins.less
+++ b/public/css/lib/kabinett/source/less/core/_mixins.less
@@ -4,16 +4,16 @@
 
 .mixin-color(@color, @name) {
   .-color-@{name} {
-    color: @color !important;
-    fill: @color !important;
+    color: @color;
+    fill: @color;
   }
 
   .-color-bg-@{name} {
-    background-color: @color !important;
+    background-color: @color;
   }
 
   .-color-border-@{name} {
-    border-color: @color !important;
+    border-color: @color;
   }
 }
 
