--- a/public/css/lib/kabinett/source/less/core/_variables.less
+++ b/public/css/lib/kabinett/source/less/core/_variables.less
@@ -43,7 +43,7 @@
 @color-dribbble: #ea4c89;
 @color-github: #4078c0;
 @color-soundcloud: #ff3300;
-@color-medium: #57ad68;
+@color-medium: #000;
 @color-steam: #3f7696;
 
 
