36, Journal:Posts: Add rollover state to the medium posts

--- a/public/css/pages/journal.less
+++ b/public/css/pages/journal.less
@@ -7,6 +7,12 @@
   display: block;
   padding: 8rem 0;
   border-bottom: 1px solid #DEDEDE;
+
+  &:hover {
+    .journal__post-title {
+      color: @color-neutral-light;
+    }
+  }
 }
 
 .journal__post-title {
@@ -14,6 +20,7 @@
   line-height: 1.182em;
   width: 77.6%;
   margin: 0 auto;
+  transition: color 200ms linear;
 }
 
 .journal__post-meta {
