19, PageCover, Scroll Help Text and Icon is fixed sized now

--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -105,7 +105,7 @@
 }
 
 .page__header-help {
-  font-size: 1rem;
+  font-size: 14px;
   margin-top: 2.5em;
   opacity: 0;
   transition: opacity 200ms linear;
@@ -120,8 +120,8 @@
 .page__header-help-svg {}
 
 .page__header-help-text {
-  font-size: 1.167rem;
-  padding: .1em 0 0 .8em;
+  padding: 5px 0 0 6px;
+  line-height: 1;
 }
 
 .testimonial-blockquote {
