23, apply new design to project planner (progress)

--- a/public/css/ui/gradients.less
+++ b/public/css/ui/gradients.less
@@ -1,19 +1,31 @@
 /* blue-green */
+.-grad-01 {
+  background-image: linear-gradient(to right, @accent-blue, @accent-green);
+}
 .-gradient-01::before {
   background-image: linear-gradient(to right, @accent-blue, @accent-green);
 }
 
 /* green-orange */
+.-grad-02 {
+  background-image: linear-gradient(to right, @accent-green, @accent-orange);
+}
 .-gradient-02::before {
   background-image: linear-gradient(to right, @accent-green, @accent-orange);
 }
 
 /* orange-pink */
+.-grad-03 {
+  background-image: linear-gradient(to right, @accent-orange, @accent-pink);
+}
 .-gradient-03::before {
   background-image: linear-gradient(to right, @accent-orange, @accent-pink);
 }
 
 /* pink-greyblue */
+.-grad-04 {
+  background-image: linear-gradient(to right, @accent-pink, @accent-greyblue);
+}
 .-gradient-04::before {
   background-image: linear-gradient(to right, @accent-pink, @accent-greyblue);
 }
