--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -30,26 +30,49 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 6rem;
+  padding: 6rem 6rem 7.5rem 6rem;
   overflow: auto;
   visibility:hidden;
   opacity: 0;
-  transform: translatex(2em);
+  // transform: translatex(2em);
   transition: opacity .3s, transform .3s;
+
+  > .page__container {
+    padding: 0 7rem;
+  }
 
   &.active {
     opacity: 1;
     visibility: visible;
-    transform: translatex(0);
+    // transform: translatex(0);
+  }
+}
+
+.project-planner__footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1.3334rem 6rem;
+  background-color: #F5F8FA;
+
+  > .page__container {
+    padding: 0 7rem;
   }
 }
 
 .project-planner__step-counter {
-  letter-spacing: 5px;
-  font-size: 1.667rem;
-  margin-bottom: 5rem;
-
-  .dim {color: #C3D2D9}
+  font-size: 1.333rem;
+  line-height: 3.5em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 3.5em;
+  height: 3.5em;
+  letter-spacing: 1px;
+  border-radius: 50%;
+  text-align: center;
+  color: @color-white;
 }
 
 .project-planner__title {
@@ -59,18 +82,28 @@
 }
 
 .project-planner__desc {
-  font-size: 1.333rem;
+  font-size: 1.25rem;
   color: #7E888C;
 }
 
 .project-type-container {}
 
+.project-type-col {
+  position: relative;
+  float: left;
+  width: 20%;
+  padding: 0 2em 0 0;
+
+  &.last {
+    padding: 0 0 0 2em;
+  }
+}
+
 .project-type-selector {
-  margin-right: 2em;
   margin-bottom: 2em;
   padding: 1em;
   position: relative;
-  width: 15rem;
+  width: 100%;
   height: 15rem;
   outline: none;
   cursor: pointer;
@@ -101,11 +134,16 @@
   }
 }
 
+.project-type-desc {
+  font-size: 1.083em;
+}
+
 .project-type__divider {
-  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 1px;
   height: 15rem;
-  margin-right: 2em;
   background-color: #DAE2E6;
 }
 
