23, project planner: apply new design

--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -112,9 +112,9 @@
   &.-lg {border-width: 2px}
 
   &.-mini {
-    font-size: 1.083rem;
-    height: 2.462em;
-    line-height: 2.462em;
+    font-size: 1.25rem;
+    height: 2.133em;
+    line-height: 2.133em;
   }
 
   &.-white {.mixin-kabinett-button(transparent, @color-white, @color-white)}
@@ -125,6 +125,7 @@
   &.-pink {.mixin-kabinett-button(transparent, @accent-pink, @accent-pink)}
   &.-green {.mixin-kabinett-button(transparent, @accent-green, @accent-green)}
   &.-purple {.mixin-kabinett-button(transparent, @accent-purple, @accent-purple)}
+  &.-gray {.mixin-kabinett-button(@color-white, #7E888C, @color-gray)}
 }
 
 /* =========================================================================== *
