--- a/public/css/ui/gradients.less
+++ b/public/css/ui/gradients.less
@@ -1,6 +1,6 @@
 /* blue-green */
 .-grad-01 {
-  background-image: linear-gradient(to right, @accent-blue, @accent-green);
+  background-image: linear-gradient(135deg, @accent-blue -30%, @accent-green 130%);
 }
 .-gradient-01::before {
   background-image: linear-gradient(to right, @accent-blue, @accent-green);
@@ -8,7 +8,7 @@
 
 /* green-orange */
 .-grad-02 {
-  background-image: linear-gradient(to right, @accent-green, @accent-orange);
+  background-image: linear-gradient(135deg, @accent-green -30%, @accent-orange 130%);
 }
 .-gradient-02::before {
   background-image: linear-gradient(to right, @accent-green, @accent-orange);
@@ -16,7 +16,7 @@
 
 /* orange-pink */
 .-grad-03 {
-  background-image: linear-gradient(to right, @accent-orange, @accent-pink);
+  background-image: linear-gradient(45deg, @accent-orange, @accent-pink);
 }
 .-gradient-03::before {
   background-image: linear-gradient(to right, @accent-orange, @accent-pink);
@@ -24,10 +24,14 @@
 
 /* pink-greyblue */
 .-grad-04 {
-  background-image: linear-gradient(to right, @accent-pink, @accent-greyblue);
+  background-image: linear-gradient(45deg, @accent-pink, @accent-greyblue);
 }
 .-gradient-04::before {
   background-image: linear-gradient(to right, @accent-pink, @accent-greyblue);
+}
+
+.-grad-05 {
+  background-image: linear-gradient(45deg, #3023AE -20%, #53A0FD 40%, #B4EC51 110%);
 }
 
 /* greayscale */
