--- a/public/css/ui/range-selector.less
+++ b/public/css/ui/range-selector.less
@@ -19,7 +19,7 @@
 
 .range-selector__amount {
   position: relative;
-  font-size: 2rem;
+  font-size: 1.667rem;
   line-height: 1em;
   width: 20%;
   padding-bottom: 5px;
@@ -27,8 +27,8 @@
   transition: color 260ms linear;
 
   > sub {
-    font-size: .8rem;
-    line-height: 1em;
+    font-size: .6em;
+    line-height: 1.5em;
     display: inline-block;
     vertical-align: bottom;
   }
