--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -4,6 +4,7 @@
 @color-neutral-xx-dark: #293033;
 @color-neutral-light: #A1ADB3;
 @color-neutral-xx-light: #F5F7F7;
+@color-gray: #C3D2D9;
 
 @accent-blue: #009DE9;
 @accent-green: #98DC00;
