--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 6rem 6rem 7.5rem 6rem;
+  padding: 6rem 6rem 12rem 6rem;
   overflow: auto;
   visibility:hidden;
   opacity: 0;
@@ -104,7 +104,7 @@
   padding: 1em;
   position: relative;
   width: 100%;
-  height: 15rem;
+  height: 14rem;
   outline: none;
   cursor: pointer;
   color: @color-neutral-light;
@@ -143,7 +143,7 @@
   top: 0;
   left: 0;
   width: 1px;
-  height: 15rem;
+  height: 14rem;
   background-color: #DAE2E6;
 }
 
@@ -162,25 +162,31 @@
   }
 }
 
-// 03
-.project-description-wrapper {}
+// 02
+.project-description-wrapper {
+  border: 1px solid #A1ADB3;
+  border-radius: 5px;
+}
 
 .project-planner__project-description {
   font-size: 1.5rem;
   resize: none;
   outline: none;
-  height: 10em;
+  height: 16em;
   padding: 1em;;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
 }
 
 .project-upload-files-bar {
-  padding: 1.1em 1em;
-  border: 1px solid #C3D2D9;
-  border-top: 0;
-  background-color: #FAFCFC;
-  border-radius: 0 0 5px 5px;
+  margin: 0 1.5rem;
+  padding: 1.5rem 0;
+  border-top: 1px solid #DAE2E6;
+}
+
+.pp-upload-files-feedback {
+  font-size: 1.083rem;
+  margin-top: .5em;
+  overflow: hidden;
+  color: #525F66;
 }
 
 // 04
@@ -189,11 +195,22 @@
   line-height: 1;
   color: @color-neutral-dark;
 
-  > label {margin-right: 1em}
+  > label {
+    display: block;
+    margin-bottom: 1em;
+
+    > span {
+      margin-left: .7rem;
+    }
+  }
+
+  input[type="radio"]:checked + span {
+    font-family: 'Graphik-Semibold';
+    font-weight: 600;
+  }
 }
 
 .project-planner__budget-selector-range {
-  padding-bottom: 10em;
 }
 
 @media all and (max-width: 768px) {
