44, project planner, range selector, snap values (show, hide range indicator)

--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -214,9 +214,9 @@
 }
 
 @media all and (max-width: 768px) {
-  // 03
-  .project-planner__step.deadline {
-    .input-wrapper {width: 100%;}
+  .project-planner__step {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   // 04
