--- a/public/css/ui/range-selector.less
+++ b/public/css/ui/range-selector.less
@@ -22,7 +22,7 @@
   font-size: 1.667rem;
   line-height: 1em;
   width: 20%;
-  padding-bottom: 5px;
+  padding-bottom: .3em;
   color: @color-neutral-light;
   transition: color 260ms linear;
 
@@ -51,7 +51,7 @@
 
 .range-selector__amount-range-indicator {
   position: absolute;
-  bottom: 26px;
+  bottom: 2.2em;
   left: 0;
   width: 20%;
   border-bottom: 1px dashed #DAE2E6;
