--- a/public/css/style.less
+++ b/public/css/style.less
@@ -40,6 +40,7 @@
 @import './pages/journal';
 @import './pages/lets-talk';
 @import './pages/project-planner';
+@import './pages/general-application';
 
 body, html {
   margin: 0;
