--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -16,4 +16,6 @@
 @accent-red: #FF0000;
 
 @ease: cubic-bezier(0.22, 0.61, 0.36, 1);
+@ease-in-back: cubic-bezier(0.600, -0.280, 0.735, 0.045);
+@ease-in-out-back: cubic-bezier(0.680, -0.550, 0.265, 1.550);
 @ease-02: cubic-bezier(0.63,.64,.3,1);
